[package]
name = "menorah-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.9"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.6.3", features = ["arch-cortex-m", "defmt", "executor-interrupt", "executor-thread", "integrated-timers", "task-arena-size-32768"] }
embassy-rp = { version = "0.2.0", features = ["critical-section-impl", "defmt", "time-driver", "unstable-pac"] }
embassy-time = "0.3.2"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

pio-proc = "0.2.2"
pio = "0.2.1"

cortex-m = { version = "0.7.7"}
cortex-m-rt = "0.7.5"

